--- a/final_project/assets/translations/ar-AR.json
+++ b/final_project/assets/translations/ar-AR.json
@@ -12,6 +12,7 @@
         "subtitle": "احصل على منظم فعاليات ليجهز مناسبتك الخاصة، أو كن مقدم خدمة."
     },
     "onboardingNext": "التالي",
+    "get_started": "ابدأ الان",
     "userType": {
         "welcome": "مرحبًا بك في",
         "question": "كيف ترغب في استخدام التطبيق؟",
