update login, profile screens, and translations

--- a/final_project/assets/translations/ar-AR.json
+++ b/final_project/assets/translations/ar-AR.json
@@ -23,18 +23,44 @@
         "email": "البريد الإلكتروني",
         "password": "كلمة المرور",
         "phone": "رقم الجوال",
-        "crNumber": "رقم السجل التجاري",
+        "cr_number": "رقم السجل التجاري",
         "username": "اسم المستخدم",
-        "forgetPassword": "نسيت كلمة المرور؟",
-        "noAccount": "ليس لديك حساب؟",
-        "haveAccount": "لديك حساب بالفعل؟",
-        "signUpNow": "سجل الآن",
+        "forget_password": "نسيت كلمة المرور؟",
+        "no_account": "ليس لديك حساب؟",
+        "have_account": "لديك حساب بالفعل؟",
+        "signup_now": "سجل الآن",
         "agree": "أوافق على",
-        "terms": "شروط الخدمة",
+        "terms": "شروط الاستخدام",
         "guest": "الدخول كزائر",
         "login": "تسجيل الدخول",
-        "signUp": "إنشاء حساب",
-        "stepAway": "خطوة واحدة تفصلك عن المناسبة المثالية"
+        "signup": "إنشاء حساب",
+        "step_away": "خطوة واحدة تفصلك عن المناسبة المثالية",
+        "reset_password_instruction": "يرجى إدخال البريد الإلكتروني المرتبط بحسابك لإعادة تعيين كلمة المرور",
+        "send_reset_link": "إرسال رابط إعادة التعيين",
+        "reset_password_title": "إعادة تعيين كلمة المرور",
+        "reset_password_description": "أدخل كلمة مرور جديدة لحسابك، وتأكد من أنها قوية وسهلة التذكر.",
+        "confirm_reset": "تأكيد",
+        "confirm_password": "تأكيد كلمة المرور"
+    },
+    "terms": {
+        "title_1": "1. التعاريف",
+        "body_1": "تشير كلمة \"نحن\" إلى التطبيق الذي يربط العملاء بمقدمي خدمات الفعاليات. تشير كلمة \"أنت\" إلى المستخدم، سواء كان عميلًا أو مقدم خدمة.",
+        "title_2": "2. وصف الخدمة",
+        "body_2": "يسمح التطبيق للمستخدمين بتصفح، تصفية، وحجز الخدمات مثل الأماكن، التموين، الزينة، التصوير، النقل، والمزيد - كل ذلك في مكان واحد.",
+        "title_3": "3. حساب المستخدم",
+        "body_3": "يجب عليك تقديم معلومات دقيقة وصحيحة عند إنشاء حسابك وتتحمل مسؤولية جميع الأنشطة التي تتم من خلاله.",
+        "title_4": "4. مسؤوليات المستخدم",
+        "body_4": "يُمنع إساءة استخدام التطبيق، بما في ذلك نشر محتوى مسيء أو مضلل. يرجى احترام جميع المستخدمين.",
+        "title_5": "5. الحجز والدفع",
+        "body_5": "يوفر التطبيق أدوات الحجز، ولكن الاتفاق النهائي والدفع بينك وبين مقدم الخدمة. نحن غير مسؤولين عن أي نزاعات تنشأ.",
+        "title_6": "6. تحديد المسؤولية",
+        "body_6": "نحن نوفر المنصة فقط ولا نضمن جودة الخدمات. أي مشاكل يجب حلها بين المستخدم ومقدم الخدمة.",
+        "title_7": "7. الإلغاءات والاستردادات",
+        "body_7": "تختلف سياسات الإلغاء والاسترداد حسب مقدم الخدمة. يرجى مراجعتها بعناية قبل تأكيد الحجز.",
+        "title_8": "8. تغييرات في الشروط",
+        "body_8": "نحتفظ بالحق في تحديث الشروط في أي وقت. سيتم إبلاغك بالتغييرات المهمة عبر التطبيق.",
+        "title_9": "9. الاتصال",
+        "body_9": "للوصول إلينا، يرجى استخدام قسم \"اتصل بنا\" داخل التطبيق."
     },
     "home": {
         "hello": "مرحبًا",
@@ -90,22 +116,23 @@
         "system": "النظام",
         "arabic": "العربية",
         "favorite": "المفضلة",
-        "personalInfo": "المعلومات الشخصية",
-        "darkMode": "الوضع الليلي",
+        "personal_info": "المعلومات الشخصية",
+        "dark_mode": "الوضع الليلي",
         "language": "اللغة",
         "mode": "الوضع",
         "more": "المزيد",
-        "paymentMethod": "طرق الدفع",
+        "payment_method": "طرق الدفع",
         "support": "الدعم",
         "privacy": "سياسة الخصوصية",
         "logout": "تسجيل الخروج",
-        "changeEmail": "تغيير البريد الإلكتروني",
-        "changePhone": "تغيير رقم الجوال",
-        "changePassword": "تغيير كلمة المرور",
+        "change_email": "تغيير البريد الإلكتروني",
+        "change_phone": "تغيير رقم الجوال",
+        "change_password": "تغيير كلمة المرور",
         "save": "حفظ",
-        "addMore": "إضافة المزيد",
+        "add_more": "إضافة المزيد",
         "preferences": "التفضيلات",
-        "accountSettings": "إعدادات الحساب"
+        "account_settings": "إعدادات الحساب",
+        "contact_us": "للمساعدة ولمزيد من المعلومات، يرجى التواصل معنا عبر البريد الإلكتروني"
     },
     "chat": {
         "title": "المحادثة",
