--- a/final_project/assets/translations/en-US.json
+++ b/final_project/assets/translations/en-US.json
@@ -23,18 +23,44 @@
         "email": "Email",
         "password": "Password",
         "phone": "Phone Number",
-        "crNumber": "CR Number",
+        "cr_number": "CR Number",
         "username": "Username",
-        "forgetPassword": "Forget password?",
-        "noAccount": "Don’t have an account?",
-        "haveAccount": "Already have an account?",
-        "signUpNow": "Sign up",
-        "agree": "Agree to our",
-        "terms": "Terms of Service",
+        "forget_password": "Forget password?",
+        "no_account": "Don’t have an account?",
+        "have_account": "Already have an account?",
+        "signup_now": "Sign up",
+        "agree": "I agree to the",
+        "terms": "Terms of Use",
         "guest": "Join as Guest",
         "login": "Login",
-        "signUp": "Sign up",
-        "stepAway": "You're one step away from the perfect event"
+        "signup": "Sign up",
+        "step_away": "You're one step away from the perfect event",
+        "reset_password_instruction": "Please enter the email associated with your account to reset your password",
+        "send_reset_link": "Send Reset Link",
+        "reset_password_title": "Reset Password",
+        "reset_password_description": "Enter a new password for your account. Make sure it’s strong and easy to remember.",
+        "confirm_reset": "Confirm",
+        "confirm_password": "Confirm Password"
+    },
+    "terms": {
+        "title_1": "1. Definitions",
+        "body_1": "\"We\" refers to the application that connects clients with event service providers. \"You\" refers to the user, whether a client or a service provider.",
+        "title_2": "2. Service Description",
+        "body_2": "The app allows users to browse, filter, and book services such as venues, catering, decoration, photography, transportation, and more — all in one place.",
+        "title_3": "3. User Account",
+        "body_3": "You must provide accurate information when creating an account and are responsible for any activity under your account.",
+        "title_4": "4. User Responsibilities",
+        "body_4": "Misuse of the app, including posting offensive or misleading content, is prohibited. Please respect all users.",
+        "title_5": "5. Booking and Payment",
+        "body_5": "The app facilitates booking tools, but the final agreement is between you and the service provider. We are not responsible for any disputes.",
+        "title_6": "6. Limitation of Liability",
+        "body_6": "We only provide the platform and do not guarantee the quality of services. Any issues are between the user and the provider.",
+        "title_7": "7. Cancellations and Refunds",
+        "body_7": "Policies vary by provider. Please review them before confirming your booking.",
+        "title_8": "8. Changes to Terms",
+        "body_8": "We reserve the right to update the terms at any time. You will be notified of significant changes through the app.",
+        "title_9": "9. Contact",
+        "body_9": "To reach us, please use the \"Contact Us\" section within the app."
     },
     "home": {
         "hello": "Hello",
@@ -90,22 +116,23 @@
         "system": "System",
         "arabic": "Arabic",
         "favorite": "Favorite",
-        "personalInfo": "Personal Information",
-        "darkMode": "Dark Mode",
+        "personal_info": "Personal Information",
+        "dark_mode": "Dark Mode",
         "language": "Language",
         "mode": "Mode",
         "more": "More",
-        "paymentMethod": "Payment Methods",
+        "payment_method": "Payment Methods",
         "support": "Support",
         "privacy": "Privacy Policy",
         "logout": "Logout",
-        "changeEmail": "Change Email",
-        "changePhone": "Change Phone Number",
-        "changePassword": "Change Password",
+        "change_email": "Change Email",
+        "change_phone": "Change Phone Number",
+        "change_password": "Change Password",
         "save": "Save",
         "addMore": "Add More",
         "preferences": "Preferences",
-        "accountSettings": "Account Settings"
+        "account_settings": "Account Settings",
+        "contact_us": "For help and more information contact with us via email"
     },
     "chat": {
         "title": "Chat",
