--- a/final_project/assets/translations/ar-AR.json
+++ b/final_project/assets/translations/ar-AR.json
@@ -9,10 +9,10 @@
     },
     "onboarding3": {
         "title": "كن منظم فعاليات",
-        "subtitle": "احصل على منظم فعاليات ليجهز مناسبتك الخاصة، أو كن مقدم خدمة."
+        "subtitle": "احصل على منظم فعاليات ليجهز مناسبتك الخاصة، أو كن مقدم خدمة.",
+        "get_started": "ابدأ الان"
     },
     "onboardingNext": "التالي",
-    "get_started": "ابدأ الان",
     "userType": {
         "welcome": "مرحبًا بك في تجمَّل",
         "question": "كيف ترغب في استخدام التطبيق؟",
@@ -60,7 +60,7 @@
         "title_8": "8. تغييرات في الشروط",
         "body_8": "نحتفظ بالحق في تحديث الشروط في أي وقت. سيتم إبلاغك بالتغييرات المهمة عبر التطبيق.",
         "title_9": "9. الاتصال",
-        "body_9": "للوصول إلينا، يرجى استخدام قسم \"اتصل بنا\" داخل التطبيق."
+        "body_9": "للوصول إلينا، يرجى استخدام قسم \"الدعم\" داخل التطبيق."
     },
     "home": {
         "hello": "مرحبًا",
