--- a/final_project/assets/translations/en-US.json
+++ b/final_project/assets/translations/en-US.json
@@ -60,7 +60,7 @@
         "title_8": "8. Changes to Terms",
         "body_8": "We reserve the right to update the terms at any time. You will be notified of significant changes through the app.",
         "title_9": "9. Contact",
-        "body_9": "To reach us, please use the \"Contact Us\" section within the app."
+        "body_9": "To reach us, please use the \"Support\" section within the app."
     },
     "home": {
         "hello": "Hello",
