Initial provider auth,and profile

--- a/final_project/assets/translations/ar-AR.json
+++ b/final_project/assets/translations/ar-AR.json
@@ -35,12 +35,48 @@
         "login": "تسجيل الدخول",
         "signup": "إنشاء حساب",
         "step_away": "خطوة واحدة تفصلك عن المناسبة المثالية",
+        "step_away_provider_signup": "بقيت خطوة واحدة لتنضم إلى مجتمع مزودي الخدمة لدينا",
+        "step_away_provider_login": "مرحباً بعودتك! لنواصل تنمية عملك",
         "reset_password_instruction": "يرجى إدخال البريد الإلكتروني المرتبط بحسابك لإعادة تعيين كلمة المرور",
         "send_reset_link": "إرسال رابط إعادة التعيين",
         "reset_password_title": "إعادة تعيين كلمة المرور",
         "reset_password_description": "أدخل كلمة مرور جديدة لحسابك، وتأكد من أنها قوية وسهلة التذكر.",
         "confirm_reset": "تأكيد",
-        "confirm_password": "تأكيد كلمة المرور"
+        "confirm_password": "تأكيد كلمة المرور",
+        "field_required": "هذا الحقل مطلوب",
+        "name_required": "يرجى إدخال اسم",
+        "username_min": "يجب أن يكون اسم المستخدم مكونًا من 3 أحرف على الأقل",
+        "email_required": "يرجى إدخال بريد إلكتروني",
+        "email_invalid": "يرجى إدخال بريد إلكتروني صالح",
+        "phone_required": "يرجى إدخال رقم هاتف",
+        "phone_invalid": "يرجى إدخال رقم هاتف سعودي صالح",
+        "password_required": "كلمة المرور مطلوبة",
+        "password_min": "يجب أن تتكون كلمة المرور من 6 أحرف على الأقل",
+        "password_uppercase": "يجب أن تحتوي كلمة المرور على حرف كبير واحد على الأقل",
+        "password_special": "يجب أن تحتوي كلمة المرور على رمز خاص واحد على الأقل",
+        "terms_required": "يجب أن توافق على الشروط والأحكام",
+        "enter_otp": "أدخل رمز التحقق",
+        "enter_otp_description": "أدخل رمز التحقق المرسل إلى بريدك الإلكتروني",
+        "did_not_receive_otp": "لم تستلم رمز التحقق؟",
+        "resend": "إعادة الإرسال",
+        "name_ar_required": "يرجى إدخال الاسم بالعربية",
+        "name_ar_invalid": "يجب أن يتكون الاسم من حروف عربية فقط",
+        "name_en_required": "يرجى إدخال الاسم بالإنجليزية",
+        "name_en_invalid": "يجب أن يتكون الاسم من حروف إنجليزية فقط",
+        "cr_number_required": "يرجى إدخال رقم السجل التجاري",
+        "cr_number_invalid": "رقم السجل التجاري غير صالح، يجب أن يتكون من 10 أرقام",
+        "iban_required": "يرجى إدخال رقم الآيبان",
+        "iban_invalid": "يرجى إدخال رقم ايبان سعودي صالح",
+        "description_ar_required": "يرجى إدخال الوصف باللغة العربية",
+        "description_ar_invalid": "يجب أن يتكون الوصف من حروف عربية فقط",
+        "description_en_required": "يرجى إدخال الوصف باللغة الإنجليزية",
+        "description_en_invalid": "يجب أن يتكون الوصف من حروف إنجليزية فقط",
+        "name_ar": "الاسم بالعربية",
+        "name_en": "الاسم بالإنجليزية",
+        "description_ar": "الوصف بالعربية",
+        "description_en": "الوصف بالإنجليزية",
+        "commercial_registration_number": "رقم السجل التجاري",
+        "iban": "رقم الآيبان"
     },
     "terms": {
         "title_1": "1. التعاريف",
