--- a/final_project/assets/translations/en-US.json
+++ b/final_project/assets/translations/en-US.json
@@ -35,12 +35,48 @@
         "login": "Login",
         "signup": "Sign up",
         "step_away": "You're one step away from the perfect event",
+        "step_away_provider_signup": "You're one step away from joining our service provider community",
+        "step_away_provider_login": "Welcome back! Let's continue growing your business",
         "reset_password_instruction": "Please enter the email associated with your account to reset your password",
         "send_reset_link": "Send Reset Link",
         "reset_password_title": "Reset Password",
         "reset_password_description": "Enter a new password for your account. Make sure it’s strong and easy to remember.",
         "confirm_reset": "Confirm",
-        "confirm_password": "Confirm Password"
+        "confirm_password": "Confirm Password",
+        "field_required": "This field is required",
+        "name_required": "Please enter a name",
+        "username_min": "Username must be at least 3 characters",
+        "email_required": "Please enter an email",
+        "email_invalid": "Please enter a valid email address",
+        "phone_required": "Please enter a phone number",
+        "phone_invalid": "Please enter a valid Saudi phone number",
+        "password_required": "Password is required",
+        "password_min": "Password must be at least 6 characters",
+        "password_uppercase": "Password must contain at least one uppercase letter",
+        "password_special": "Password must contain at least one special character",
+        "terms_required": "You must agree to the terms and conditions",
+        "enter_otp": "Enter verification code",
+        "enter_otp_description": "Enter the verification code sent to your email",
+        "did_not_receive_otp": "Didn’t receive the verification code?",
+        "resend": "Resend",
+        "name_ar_required": "Please enter the name in Arabic",
+        "name_ar_invalid": "The name must consist of Arabic letters only",
+        "name_en_required": "Please enter the name in English",
+        "name_en_invalid": "The name must consist of English letters only",
+        "cr_number_required": "Please enter the commercial registration number",
+        "cr_number_invalid": "Invalid CR number. It must be 10 digits",
+        "iban_required": "Please enter the IBAN",
+        "iban_invalid": "Please enter a valid Saudi IBAN",
+        "description_ar_required": "Please enter the description in Arabic",
+        "description_ar_invalid": "The description must consist of Arabic letters only",
+        "description_en_required": "Please enter the description in English",
+        "description_en_invalid": "The description must consist of English letters only",
+        "name_ar": "Arabic Name",
+        "name_en": "English Name",
+        "description_ar": "Arabic Description",
+        "description_en": "English Description",
+        "commercial_registration_number": "Commercial Registration Number",
+        "iban": "IBAN Number"
     },
     "terms": {
         "title_1": "1. Definitions",
