add chat, and general fix

--- a/final_project/assets/translations/ar-AR.json
+++ b/final_project/assets/translations/ar-AR.json
@@ -232,6 +232,7 @@
         "edit_information": "تعديل المعلومات"
     },
     "chat": {
+        "chats": "المحادثات",
         "title": "المحادثة",
         "placeholder": "اكتب هنا ..."
     },
